--- a/index.html
+++ b/index.html
@@ -1,15 +1,160 @@
-
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <title>Chrome Inspired</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chrome Hearts Inspired</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+  <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    body {
+      background-color: #111;
+      color: #fff;
+      line-height: 1.6;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 50px;
+      background-color: #000;
+      border-bottom: 2px solid #fff;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    header h1 {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 2rem;
+      letter-spacing: 2px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 30px;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #c0c0c0;
+    }
+
+    .hero {
+      height: 80vh;
+      background: url('https://images.unsplash.com/photo-1564866657314-2c8b3f28b8ab?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2xvdGglMjBjaHJvbWV8fDB8fHx8MTY5MjI2ODQ1Mw&ixlib=rb-4.0.3&q=80&w=1080') no-repeat center center/cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .hero h2 {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 3rem;
+      background: rgba(0,0,0,0.6);
+      padding: 20px;
+      border: 2px solid #fff;
+    }
+
+    .section {
+      padding: 60px 50px;
+    }
+
+    .section h3 {
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .product {
+      background: #222;
+      border: 1px solid #444;
+      padding: 20px;
+      text-align: center;
+      transition: transform 0.3s;
+    }
+
+    .product:hover {
+      transform: scale(1.05);
+    }
+
+    .product img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 15px;
+    }
+
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px;
+      border-top: 2px solid #fff;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Min første nettside</h1>
-<p>Dette funker!</p>
+  <header>
+    <h1>Chrome Hearts</h1>
+    <nav>
+      <a href="#home">Hjem</a>
+      <a href="#products">Produkter</a>
+      <a href="#contact">Kontakt</a>
+    </nav>
+  </header>
+
+  <section class="hero" id="home">
+    <h2>Edgy Luxury Fashion</h2>
+  </section>
+
+  <section class="section" id="products">
+    <h3>Våre Produkter</h3>
+    <div class="products">
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1606813905161-3e6a84c58571?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2xsb3RoJTIwY2hhcm18fDB8fHx8MTY5MjI2ODQ5Mg&ixlib=rb-4.0.3&q=80&w=400" alt="Produkt 1">
+        <h4>Produkt 1</h4>
+        <p>Eksklusivt design med gotisk preg.</p>
+      </div>
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1598300059005-0cb3b0b7a1c5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2xsb3RoJTIwY2hhcm18fDB8fHx8MTY5MjI2ODUyMw&ixlib=rb-4.0.3&q=80&w=400" alt="Produkt 2">
+        <h4>Produkt 2</h4>
+        <p>Limited edition, håndlaget.</p>
+      </div>
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1616628183951-2d6bbdfd2e5b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2xsb3RoJTIwY2hhcm18fDB8fHx8MTY5MjI2ODU0OQ&ixlib=rb-4.0.3&q=80&w=400" alt="Produkt 3">
+        <h4>Produkt 3</h4>
+        <p>Ikoniske detaljer med luksusfølelse.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h3>Kontakt Oss</h3>
+    <p style="text-align:center;">Email: info@chromehearts.com | Telefon: +47 123 45 678</p>
+  </section>
+
+  <footer>
+    &copy; 2026 Chrome Hearts Inspired. Alle rettigheter reservert.
+  </footer>
 
 </body>
 </html>
+
