--- a/index.html
+++ b/index.html
@@ -1,110 +1,21 @@
-<!DOCTYPE html>
-<html lang="no">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chrome Hearts Dropshipping</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family:'Roboto', sans-serif; }
-    body { background:#111; color:#fff; line-height:1.6; }
-    header { display:flex; justify-content:space-between; align-items:center; padding:20px 50px; background:#000; border-bottom:2px solid #fff; position:sticky; top:0; z-index:100; }
-    header h1 { font-family:'UnifrakturCook', cursive; font-size:2rem; letter-spacing:2px; }
-    nav a { color:#fff; text-decoration:none; margin-left:30px; font-weight:bold; transition:0.3s; }
-    nav a:hover { color:#c0c0c0; }
-    .hero { height:80vh; background:url('https://images.unsplash.com/photo-1564866657314-2c8b3f28b8ab?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2xvdGglMjBjaHJvbWV8fDB8fHx8MTY5MjI2ODQ1Mw&ixlib=rb-4.0.3&q=80&w=1080') no-repeat center center/cover; display:flex; justify-content:center; align-items:center; text-align:center; }
-    .hero h2 { font-family:'UnifrakturCook', cursive; font-size:3rem; background:rgba(0,0,0,0.6); padding:20px; border:2px solid #fff; }
-    .section { padding:60px 50px; }
-    .section h3 { font-family:'UnifrakturCook', cursive; font-size:2rem; margin-bottom:20px; text-align:center; }
-    .products { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
-    .product { background:#222; border:1px solid #444; padding:20px; text-align:center; transition:transform 0.3s; }
-    .product:hover { transform:scale(1.05); }
-    .product img { max-width:100%; height:auto; margin-bottom:15px; }
-    .buy-button { display:inline-block; padding:10px 20px; margin-top:10px; background:#fff; color:#000; text-decoration:none; font-weight:bold; border:2px solid #fff; transition:0.3s; }
-    .buy-button:hover { background:#000; color:#fff; }
-    footer { background:#000; text-align:center; padding:20px; border-top:2px solid #fff; }
-  </style>
-</head>
-<body>
+<script>
+  const container = document.getElementById("products-container");
 
-<header>
-  <h1>Chrome Hearts</h1>
-  <nav>
-    <a href="#home">Hjem</a>
-    <a href="#products">Produkter</a>
-    <a href="#contact">Kontakt</a>
-  </nav>
-</header>
-
-<section class="hero" id="home">
-  <h2>Edgy Luxury Fashion</h2>
-</section>
-
-<section class="section" id="products">
-  <h3>Våre Produkter</h3>
-  <div class="products">
-
-    <!-- Produkt 1 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1606813905161-3e6a84c58571?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Gotisk Smykke">
-      <h4>Gotisk Smykke</h4>
-      <p>Elegant halskjede med kryss-design.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_1" class="buy-button">Kjøp</a>
-    </div>
-
-    <!-- Produkt 2 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598300059005-0cb3b0b7a1c5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Luksus T-skjorte">
-      <h4>Luksus T-skjorte</h4>
-      <p>Mørk t-skjorte med ikoniske detaljer.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_2" class="buy-button">Kjøp</a>
-    </div>
-
-    <!-- Produkt 3 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1616628183951-2d6bbdfd2e5b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Limited Edition Ring">
-      <h4>Limited Edition Ring</h4>
-      <p>Håndlaget ring med gotiske detaljer.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_3" class="buy-button">Kjøp</a>
-    </div>
-
-    <!-- Produkt 4 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1616628183952-2d6bbdfd2e5c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Luksus Caps">
-      <h4>Luksus Caps</h4>
-      <p>Sort caps med logo i metall.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_4" class="buy-button">Kjøp</a>
-    </div>
-
-    <!-- Produkt 5 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1616628183953-2d6bbdfd2e5d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Sorte Solbriller">
-      <h4>Sorte Solbriller</h4>
-      <p>Edgy og stilrene solbriller.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_5" class="buy-button">Kjøp</a>
-    </div>
-
-    <!-- Produkt 6 -->
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1616628183954-2d6bbdfd2e5e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=400" alt="Skinnveske">
-      <h4>Skinnveske</h4>
-      <p>Mørk veske med luksuriøse detaljer.</p>
-      <a href="https://www.paypal.com/donate?hosted_button_id=DIN_BUTTON_ID_6" class="buy-button">Kjøp</a>
-    </div>
-
-  </div>
-</section>
-
-<section class="section" id="contact">
-  <h3>Kontakt Oss</h3>
-  <p style="text-align:center;">Email: info@chromehearts.com | Telefon: +47 123 45 678</p>
-</section>
-
-<footer>
-  &copy; 2026 Chrome Hearts Inspired. Alle rettigheter reservert.
-</footer>
-
-</body>
-</html>
-
-
+  // Hent produkter fra JSON
+  fetch("products.json")
+    .then(response => response.json())
+    .then(products => {
+      products.forEach(product => {
+        const div = document.createElement("div");
+        div.className = "product";
+        div.innerHTML = `
+          <img src="${product.image}" alt="${product.name}">
+          <h4>${product.name}</h4>
+          <p>${product.description}</p>
+          <a href="https://www.paypal.com/donate?hosted_button_id=${product.paypalId}" class="buy-button">Kjøp</a>
+        `;
+        container.appendChild(div);
+      });
+    })
+    .catch(err => console.error("Kunne ikke laste produkter:", err));
+</script>
